# DepthCrafter

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_macOS.md  app.py  depthcrafter_ui  docker-entrypoint.sh  interactive_cli.py  npz_to_exr.py  pyproject.toml  requirements.txt  run.py  run.sh  run_batch.sh  visualization_pcd.py
benchmark/: demo.sh
benchmark/csv/: meta_bonn.csv  meta_kitti_val.csv  meta_nyu_test.csv  meta_scannet_test.csv  meta_sintel.csv
benchmark/dataset_extract/: dataset_extract_bonn.py  dataset_extract_kitti.py  dataset_extract_nyu.py  dataset_extract_scannet.py  dataset_extract_sintel.py
benchmark/eval/: eval.py  eval.sh  metric.py
benchmark/infer/: infer.sh  infer_batch.py
depthcrafter/: depth_crafter_ppl.py  inference.py  unet.py  utils.py
tools/: npz_to_exr.py
unit_tests/: test_depth_crafter_ppl.py  test_inference.py  test_unet.py  test_utils.py
visualization/: visualization_pcd.py
