[project]
name = "depthcrafter"
version = "1.0.1"
description = "Generating Consistent Long Depth Sequences for Open-world Videos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "decord>=0.6.0",
    "diffusers>=0.35.2",
    "fire>=0.7.1",
    "gradio>=6.0.1",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "mediapy>=1.2.4",
    "pytest>=9.0.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.57.3",
    "xformers>=0.0.31.post1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["unit_tests"]
